@@ -25,10 +25,9 @@
 -->
 </access>
 <stack>
-<!-- The effective domain this server processes requests for, and an optional
+<!-- The effective names this server processes requests for, and an optional
      list of host or domain names this server will also respond to.  The
      default hostname is always accepted.
-  <domain>gnutelephony.org</domain>
   <localnames>sip.gnutelephony.org, server.local, something somewhere</localnames>
 -->
 
