@@ -1,5 +1,6 @@
 From version 0.6.2 to ???
 - start of server media proxy for NAT support.
+- authentication realm and "domain" merged into single property.
 
 From version 0.6.1 to 0.6.2
 - only create extensions for generated accounts if using extension dialing.
